my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EAMBDEFAULT/EAMBDEFAULT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:22:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:27:1: In p1
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:31:5: warning WEXPERIMENTAL: Use of unsupported feature: more than one level of method overrides
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:37:1: In p2
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:41:5: warning WEXPERIMENTAL: Use of unsupported feature: more than one level of method overrides
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:41:5: In p2.m
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:43:14: error EAMBDEFAULT: Ambiguous invocation of default implementation
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:11:5: default method candidate
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:23:5: default method candidate
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:31:5: In p1.m
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:33:14: error EAMBDEFAULT: Ambiguous invocation of default implementation
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:11:5: default method candidate
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EAMBDEFAULT.dml:17:5: default method candidate
